--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "Tic-Tac-Toe created via test-driven-development",
   "private": true,
   "scripts": {
+    "start": "http-server -p ${PORT:-8080} build",
     "test": "jest tst/*",
     "build": "webpack",
-    "dev": "http-server build"
+    "dev": "webpack-dev-server"
   },
   "license": "MIT",
+  "engines": {
+    "yarn": "1.x"
+  },
   "dependencies": {
-    "jest": "^24.9.0"
+    "http-server": "^0.12.1"
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.12.1",
+    "jest": "^24.9.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "jest": {
     "moduleNameMapper": {
