--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "http-server -p ${PORT:-8080} build",
     "test": "jest tst/*",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "cov": "yarn test --collect-coverage"
   },
   "license": "MIT",
   "engines": {
